--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
 </head>
 <body>
   <div id="app"></div>
+  <script>
+    // GitHub Pages SPA 重定向处理
+    (function(){
+      var redirect = sessionStorage.redirect;
+      delete sessionStorage.redirect;
+      if (redirect && redirect != location.href) {
+        history.replaceState(null, null, redirect);
+      }
+    })();
+  </script>
   <script type="module" src="/src/main.js"></script>
 </body>
 </html>
