--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   
   <!-- Preload -->
-  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style" onload="this.rel='stylesheet'">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="preload" href="/companylogo.jpg" as="image">
   
   <!-- Font Awesome -->
