seo: comprehensive SEO optimization - meta tags, JSON-LD, sitemap, robots.txt, dynamic titles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Triple Goats - Green Energy Green Life</title>
+  <title>Triple Goats — Rwanda's Premier Electric Vehicle Dealer | Green Energy Green Life</title>
   
   <!-- Favicon -->
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -25,15 +25,81 @@
   <link rel="manifest" href="/site.webmanifest">
   
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Triple Goats - Rwanda's premier electric vehicle dealer. Green Energy, Green Life. Explore our wide range of EVs, charging solutions, and automotive services.">
-  <meta name="keywords" content="electric vehicles, EV, Rwanda, Triple Goats, car sales, charging stations, sustainable transport">
-  
+  <meta name="description" content="Triple Goats (T&G Automobile) — Rwanda's trusted electric vehicle dealer in Kigali. Shop BYD, Dongfeng, Leapmotor, Kia, Toyota & more EVs with full after-sales support, EV charging, taxi service and car rental.">
+  <meta name="keywords" content="electric vehicles Rwanda, EV dealer Kigali, Triple Goats, T&G Automobile, BYD Rwanda, Dongfeng Rwanda, Leapmotor, Kia EV5, Toyota BZ3, electric car Africa, EV charging station Kigali, electric taxi Rwanda, car rental Kigali, new energy vehicles, sustainable transport Africa">
+  <meta name="author" content="Triple Goats - T&G Automobile">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://tgautomobile.com/">
+
   <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Triple Goats - Green Energy Green Life">
-  <meta property="og:description" content="Rwanda's premier electric vehicle dealer">
+  <meta property="og:title" content="Triple Goats — Rwanda's Premier Electric Vehicle Dealer">
+  <meta property="og:description" content="Shop BYD, Dongfeng, Leapmotor & more electric vehicles in Kigali. Full after-sales support, EV charging, taxi service and car rental.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://outshipping.github.io">
-  <meta property="og:image" content="/companylogo.jpg">
+  <meta property="og:url" content="https://tgautomobile.com/">
+  <meta property="og:image" content="https://tgautomobile.com/companylogo.jpg">
+  <meta property="og:site_name" content="Triple Goats - T&G Automobile">
+  <meta property="og:locale" content="en_US">
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Triple Goats — Rwanda's Premier Electric Vehicle Dealer">
+  <meta name="twitter:description" content="Shop BYD, Dongfeng, Leapmotor & more electric vehicles in Kigali. Full after-sales support, EV charging and taxi service.">
+  <meta name="twitter:image" content="https://tgautomobile.com/companylogo.jpg">
+
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "AutoDealer",
+    "name": "Triple Goats - T&G Automobile",
+    "alternateName": "三羊汽车",
+    "url": "https://tgautomobile.com",
+    "logo": "https://tgautomobile.com/companylogo.jpg",
+    "image": "https://tgautomobile.com/companylogo.jpg",
+    "description": "Rwanda's trusted electric vehicle dealer offering BYD, Dongfeng, Leapmotor, Kia, Toyota and more EVs with full after-sales support in Kigali.",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Kicukiro District",
+      "addressLocality": "Kigali",
+      "addressCountry": "RW"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": -1.9706,
+      "longitude": 30.1044
+    },
+    "telephone": "+250",
+    "openingHoursSpecification": [
+      {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday"],
+        "opens": "08:00",
+        "closes": "18:00"
+      },
+      {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": "Saturday",
+        "opens": "09:00",
+        "closes": "13:00"
+      }
+    ],
+    "priceRange": "$$",
+    "sameAs": []
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Triple Goats - T&G Automobile",
+    "url": "https://tgautomobile.com",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://tgautomobile.com/inventory?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
 </head>
 <body>
   <div id="app"></div>
