--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       "latitude": -1.9706,
       "longitude": 30.1044
     },
-    "telephone": "+250",
+    "telephone": "+250 785 084 313",
     "openingHoursSpecification": [
       {
         "@type": "OpeningHoursSpecification",
@@ -84,7 +84,12 @@
       }
     ],
     "priceRange": "$$",
-    "sameAs": []
+    "sameAs": [
+      "https://www.instagram.com/tg_auto_rwanda/",
+      "https://x.com/Triple_Goats",
+      "https://www.facebook.com/TripleGoats",
+      "https://www.tiktok.com/@tg.auto.rwanda"
+    ]
   }
   </script>
   <script type="application/ld+json">
