--- a/public/404.html
+++ b/public/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Triple Goats Automobile</title>
+  <title>Page Not Found — Triple Goats | T&G Automobile</title>
   <script>
     // GitHub Pages 单页应用重定向脚本
     // 将 404 请求重定向到 index.html，同时保留路径信息
