feat(seo): 三站SEO集群优化 - JSON-LD实体关联/hreflang/内链/本地化
- index.html: 增强AutoDealer JSON-LD + 新增集团关系图谱 + hreflang多地区路由 + geo/本地化meta
- FooterBar.vue: 添加Our Global Network内链区块(zjaladin/aladinauto)
- AboutView.vue: 添加Global Network段落，描述三站闭环关系
- robots.txt: 添加集团关联站点注释
- .tasks/seo-cluster-optimization.md: 完整交付文档(含zjaladin/aladinauto的JSON-LD、Meta Tags、内链建议、企业矩阵文案)

--- a/index.html
+++ b/index.html
@@ -25,42 +25,66 @@
   <link rel="manifest" href="/site.webmanifest">
   
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Triple Goats (T&G Automobile) — Rwanda's trusted electric vehicle dealer in Kigali. Shop BYD, Dongfeng, Leapmotor, Kia, Toyota & more EVs with full after-sales support, EV charging, taxi service and car rental.">
-  <meta name="keywords" content="electric vehicles Rwanda, EV dealer Kigali, Triple Goats, T&G Automobile, BYD Rwanda, Dongfeng Rwanda, Leapmotor, Kia EV5, Toyota BZ3, electric car Africa, EV charging station Kigali, electric taxi Rwanda, car rental Kigali, new energy vehicles, sustainable transport Africa">
-  <meta name="author" content="Triple Goats - T&G Automobile">
+  <meta name="description" content="Triple Goats (T&G Automobile) — Rwanda's trusted electric vehicle dealer in Kigali, a subsidiary of Zhejiang Aladdin Group. Shop BYD, Dongfeng, Leapmotor, Kia, Toyota & more EVs with full after-sales support, EV charging, customs clearance, taxi service and car rental. Pay with MTN MoMo or Airtel Money.">
+  <meta name="keywords" content="electric vehicles Rwanda, EV dealer Kigali, Triple Goats, T&G Automobile, TG Automobile, BYD Rwanda, Dongfeng Rwanda, Leapmotor Rwanda, Kia EV5 Kigali, Toyota BZ3 Rwanda, electric car Africa, EV charging station Kigali, electric taxi Rwanda, car rental Kigali, new energy vehicles, sustainable transport Africa, Kicukiro car dealer, Gasabo, Nyarugenge, imodoka ya stima, amashanyarazi, MTN MoMo payment, Airtel Money, customs clearance Rwanda, 浙江阿啦丁, 阿啦丁汽车, 阿啦丁进出口, zjaladin, aladinauto, TGAutomobile, 卢旺达电动汽车, 非洲新能源汽车, 中国电动汽车出口, 基加利汽车经销商">
+  <meta name="author" content="Triple Goats - T&G Automobile, a subsidiary of Zhejiang Aladdin Import & Export Trading Co., Ltd.">
   <meta name="robots" content="index, follow">
+  <meta name="geo.region" content="RW-01">
+  <meta name="geo.placename" content="Kigali, Rwanda">
+  <meta name="geo.position" content="-1.9706;30.1044">
+  <meta name="ICBM" content="-1.9706, 30.1044">
   <link rel="canonical" href="https://tgautomobile.com/">
 
+  <!-- Hreflang: 多语言/多地区路由 -->
+  <link rel="alternate" hreflang="en-rw" href="https://tgautomobile.com/">
+  <link rel="alternate" hreflang="fr-rw" href="https://tgautomobile.com/">
+  <link rel="alternate" hreflang="en" href="https://tgautomobile.com/">
+  <link rel="alternate" hreflang="x-default" href="https://tgautomobile.com/">
+  <!-- 关联站点 hreflang -->
+  <link rel="alternate" hreflang="zh" href="https://www.zjaladin.com/">
+  <link rel="alternate" hreflang="en" href="https://www.aladinauto.com/">
+
   <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Triple Goats — Rwanda's Premier Electric Vehicle Dealer">
-  <meta property="og:description" content="Shop BYD, Dongfeng, Leapmotor & more electric vehicles in Kigali. Full after-sales support, EV charging, taxi service and car rental.">
+  <meta property="og:title" content="Triple Goats — Rwanda's Premier Electric Vehicle Dealer | Aladdin Group">
+  <meta property="og:description" content="Shop BYD, Dongfeng, Leapmotor & more electric vehicles in Kigali. Full after-sales support, EV charging, customs clearance, taxi service and car rental. A subsidiary of Zhejiang Aladdin Group.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://tgautomobile.com/">
   <meta property="og:image" content="https://tgautomobile.com/companylogo.jpg">
   <meta property="og:site_name" content="Triple Goats - T&G Automobile">
-  <meta property="og:locale" content="en_US">
+  <meta property="og:locale" content="en_RW">
+  <meta property="og:locale:alternate" content="fr_RW">
+  <meta property="og:locale:alternate" content="en_US">
+  <meta property="og:locale:alternate" content="zh_CN">
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Triple Goats — Rwanda's Premier Electric Vehicle Dealer">
-  <meta name="twitter:description" content="Shop BYD, Dongfeng, Leapmotor & more electric vehicles in Kigali. Full after-sales support, EV charging and taxi service.">
+  <meta name="twitter:title" content="Triple Goats — Rwanda's Premier EV Dealer | Aladdin Group">
+  <meta name="twitter:description" content="Shop BYD, Dongfeng, Leapmotor & more EVs in Kigali. Full after-sales, EV charging, customs clearance. A subsidiary of Zhejiang Aladdin Group.">
   <meta name="twitter:image" content="https://tgautomobile.com/companylogo.jpg">
 
-  <!-- JSON-LD Structured Data -->
+  <!-- JSON-LD Structured Data: AutoDealer（本地经销商实体） -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "AutoDealer",
+    "@id": "https://tgautomobile.com/#autodealer",
     "name": "Triple Goats - T&G Automobile",
-    "alternateName": "三羊汽车",
+    "alternateName": ["三羊汽车", "San Yang (Rwanda) Automobile Sales Co., Ltd.", "TG Automobile Rwanda"],
     "url": "https://tgautomobile.com",
     "logo": "https://tgautomobile.com/companylogo.jpg",
     "image": "https://tgautomobile.com/companylogo.jpg",
-    "description": "Rwanda's trusted electric vehicle dealer offering BYD, Dongfeng, Leapmotor, Kia, Toyota and more EVs with full after-sales support in Kigali.",
+    "description": "Rwanda's trusted electric vehicle dealer in Kigali, a subsidiary of Zhejiang Aladdin Group. Offering BYD, Dongfeng, Leapmotor, Kia, Toyota EVs with full after-sales support, EV charging, and customs clearance services.",
+    "foundingDate": "2023",
+    "areaServed": {
+      "@type": "Country",
+      "name": "Rwanda",
+      "sameAs": "https://en.wikipedia.org/wiki/Rwanda"
+    },
     "address": {
       "@type": "PostalAddress",
-      "streetAddress": "Kicukiro District",
+      "streetAddress": "KK 15 Rd, Kicukiro District",
       "addressLocality": "Kigali",
+      "addressRegion": "Kigali",
       "addressCountry": "RW"
     },
     "geo": {
@@ -69,6 +93,7 @@
       "longitude": 30.1044
     },
     "telephone": "+250 785 084 313",
+    "email": "tgautomobilee@gmail.com",
     "openingHoursSpecification": [
       {
         "@type": "OpeningHoursSpecification",
@@ -84,14 +109,86 @@
       }
     ],
     "priceRange": "$$",
+    "currenciesAccepted": "RWF, USD",
+    "paymentAccepted": "Cash, Bank Transfer, MTN Mobile Money, Airtel Money",
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "Electric Vehicles in Rwanda",
+      "itemListElement": [
+        {"@type": "OfferCatalog", "name": "Electric Sedans"},
+        {"@type": "OfferCatalog", "name": "Electric SUVs"},
+        {"@type": "OfferCatalog", "name": "Electric Pickups & Trucks"},
+        {"@type": "OfferCatalog", "name": "Electric Buses & Vans"}
+      ]
+    },
+    "makesOffer": [
+      {"@type": "Offer", "itemOffered": {"@type": "Service", "name": "EV Sales & Consultation"}},
+      {"@type": "Offer", "itemOffered": {"@type": "Service", "name": "EV Charging Station"}},
+      {"@type": "Offer", "itemOffered": {"@type": "Service", "name": "After-Sales Maintenance"}},
+      {"@type": "Offer", "itemOffered": {"@type": "Service", "name": "Customs Clearance & Import"}},
+      {"@type": "Offer", "itemOffered": {"@type": "Service", "name": "Electric Taxi Service"}},
+      {"@type": "Offer", "itemOffered": {"@type": "Service", "name": "EV Car Rental"}}
+    ],
     "sameAs": [
       "https://www.instagram.com/tg_auto_rwanda/",
       "https://x.com/Triple_Goats",
       "https://www.facebook.com/TripleGoats",
       "https://www.tiktok.com/@tg.auto.rwanda"
-    ]
+    ],
+    "parentOrganization": {
+      "@type": "Corporation",
+      "@id": "https://www.zjaladin.com/#corporation",
+      "name": "浙江阿啦丁进出口贸易有限责任公司",
+      "alternateName": "Zhejiang Aladdin Import & Export Trading Co., Ltd.",
+      "url": "https://www.zjaladin.com"
+    },
+    "branchOf": {
+      "@type": "Corporation",
+      "@id": "https://www.zjaladin.com/#corporation",
+      "name": "浙江阿啦丁进出口贸易有限责任公司",
+      "url": "https://www.zjaladin.com"
+    }
   }
   </script>
+
+  <!-- JSON-LD: 集团关系图谱（帮助 AI 理解三站闭环） -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Corporation",
+    "@id": "https://www.zjaladin.com/#corporation",
+    "name": "浙江阿啦丁进出口贸易有限责任公司",
+    "alternateName": ["Zhejiang Aladdin Import & Export Trading Co., Ltd.", "浙江阿啦丁", "Aladdin Group"],
+    "url": "https://www.zjaladin.com",
+    "description": "Chinese automotive export corporation specializing in new energy vehicles and used car global supply chain. Parent company of AladinAuto platform and TG Automobile Rwanda.",
+    "subOrganization": [
+      {
+        "@type": "OnlineBusiness",
+        "@id": "https://www.aladinauto.com/#platform",
+        "name": "AladinAuto",
+        "alternateName": "阿啦丁汽车",
+        "url": "https://www.aladinauto.com",
+        "description": "Global used car and new energy vehicle online export platform, direct from China"
+      },
+      {
+        "@type": "AutoDealer",
+        "@id": "https://tgautomobile.com/#autodealer",
+        "name": "Triple Goats - T&G Automobile",
+        "alternateName": "三羊汽车",
+        "url": "https://tgautomobile.com",
+        "description": "Rwanda subsidiary handling local EV sales, after-sales service, and customs clearance in Kigali"
+      }
+    ],
+    "owns": {
+      "@type": "OnlineBusiness",
+      "@id": "https://www.aladinauto.com/#platform",
+      "name": "AladinAuto",
+      "url": "https://www.aladinauto.com"
+    }
+  }
+  </script>
+
+  <!-- JSON-LD: WebSite（站内搜索） -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -102,6 +199,12 @@
       "@type": "SearchAction",
       "target": "https://tgautomobile.com/inventory?q={search_term_string}",
       "query-input": "required name=search_term_string"
+    },
+    "publisher": {
+      "@type": "Corporation",
+      "@id": "https://www.zjaladin.com/#corporation",
+      "name": "浙江阿啦丁进出口贸易有限责任公司",
+      "url": "https://www.zjaladin.com"
     }
   }
   </script>
