--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Triple Goats — Rwanda's Premier Electric Vehicle Dealer | Green Energy Green Life</title>
+  <title>Triple Goats — Best Used Cars & Electric Vehicles in Kigali, Rwanda | Quality Vehicles & After-Sales Service</title>
   
   <!-- Favicon -->
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -25,8 +25,8 @@
   <link rel="manifest" href="/site.webmanifest">
   
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Triple Goats (T&G Automobile) — Rwanda's trusted electric vehicle dealer in Kigali, a subsidiary of Zhejiang Aladdin Group. Shop BYD, Dongfeng, Leapmotor, Kia, Toyota & more EVs with full after-sales support, EV charging, customs clearance, taxi service and car rental. Pay with MTN MoMo or Airtel Money.">
-  <meta name="keywords" content="electric vehicles Rwanda, EV dealer Kigali, Triple Goats, T&G Automobile, TG Automobile, BYD Rwanda, Dongfeng Rwanda, Leapmotor Rwanda, Kia EV5 Kigali, Toyota BZ3 Rwanda, electric car Africa, EV charging station Kigali, electric taxi Rwanda, car rental Kigali, new energy vehicles, sustainable transport Africa, Kicukiro car dealer, Gasabo, Nyarugenge, imodoka ya stima, amashanyarazi, MTN MoMo payment, Airtel Money, customs clearance Rwanda, 浙江阿啦丁, 阿啦丁汽车, 阿啦丁进出口, zjaladin, aladinauto, TGAutomobile, 卢旺达电动汽车, 非洲新能源汽车, 中国电动汽车出口, 基加利汽车经销商">
+  <meta name="description" content="Triple Goats (T&G Automobile) — Rwanda's trusted used car and electric vehicle dealer in Kigali, a subsidiary of Zhejiang Aladdin Group. Shop BYD, Dongfeng, Leapmotor, Kia, Toyota & more EVs and quality used cars. Sourced directly from our China HQ to ensure the best price. Full after-sales support, EV charging, customs clearance, taxi service and car rental. Pay with MTN MoMo or Airtel Money.">
+  <meta name="keywords" content="electric vehicles Rwanda, used cars Kigali, EV dealer Kigali, best used cars Rwanda, second hand cars Kigali, Triple Goats, T&G Automobile, TG Automobile, TGAutomobile Rwanda, BYD Rwanda, Dongfeng Rwanda, Leapmotor Rwanda, Kia EV5 Kigali, Toyota BZ3 Rwanda, electric car Africa, used car import Rwanda, EV charging station Kigali, electric taxi Rwanda, car rental Kigali, new energy vehicles, sustainable transport Africa, Kicukiro car dealer, Gasabo, Nyarugenge, imodoka ya stima, amashanyarazi, MTN MoMo payment, Airtel Money, customs clearance Rwanda, quality inspection, certified Chinese vehicles, 浙江阿啦丁, 阿啦丁汽车, 阿啦丁进出口, zjaladin, aladinauto, TGAutomobile, 卢旺达电动汽车, 卢旺达二手车, 非洲新能源汽车, 中国电动汽车出口, 基加利汽车经销商">
   <meta name="author" content="Triple Goats - T&G Automobile, a subsidiary of Zhejiang Aladdin Import & Export Trading Co., Ltd.">
   <meta name="robots" content="index, follow">
   <meta name="geo.region" content="RW-01">
@@ -45,8 +45,8 @@
   <link rel="alternate" hreflang="en" href="https://www.aladinauto.com/">
 
   <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Triple Goats — Rwanda's Premier Electric Vehicle Dealer | Aladdin Group">
-  <meta property="og:description" content="Shop BYD, Dongfeng, Leapmotor & more electric vehicles in Kigali. Full after-sales support, EV charging, customs clearance, taxi service and car rental. A subsidiary of Zhejiang Aladdin Group.">
+  <meta property="og:title" content="Triple Goats — Best Used Cars & EVs in Kigali | Aladdin Group">
+  <meta property="og:description" content="Shop quality used cars & electric vehicles in Kigali. BYD, Dongfeng, Leapmotor & more. Sourced directly from China HQ. Full after-sales support, EV charging, customs clearance. A subsidiary of Zhejiang Aladdin Group.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://tgautomobile.com/">
   <meta property="og:image" content="https://tgautomobile.com/companylogo.jpg">
@@ -58,8 +58,8 @@
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Triple Goats — Rwanda's Premier EV Dealer | Aladdin Group">
-  <meta name="twitter:description" content="Shop BYD, Dongfeng, Leapmotor & more EVs in Kigali. Full after-sales, EV charging, customs clearance. A subsidiary of Zhejiang Aladdin Group.">
+  <meta name="twitter:title" content="Triple Goats — Best Used Cars & EVs in Kigali | Aladdin Group">
+  <meta name="twitter:description" content="Quality used cars & EVs in Kigali. Sourced directly from China. Full after-sales, EV charging, customs clearance. A subsidiary of Zhejiang Aladdin Group.">
   <meta name="twitter:image" content="https://tgautomobile.com/companylogo.jpg">
 
   <!-- JSON-LD Structured Data: AutoDealer（本地经销商实体） -->
@@ -73,7 +73,7 @@
     "url": "https://tgautomobile.com",
     "logo": "https://tgautomobile.com/companylogo.jpg",
     "image": "https://tgautomobile.com/companylogo.jpg",
-    "description": "Rwanda's trusted electric vehicle dealer in Kigali, a subsidiary of Zhejiang Aladdin Group. Offering BYD, Dongfeng, Leapmotor, Kia, Toyota EVs with full after-sales support, EV charging, and customs clearance services.",
+    "description": "Rwanda's trusted used car and electric vehicle dealer in Kigali, a subsidiary of Zhejiang Aladdin Group. Sourced directly from our China HQ to ensure the best price. Offering BYD, Dongfeng, Leapmotor, Kia, Toyota EVs and quality used cars with full after-sales support, EV charging, and customs clearance services.",
     "foundingDate": "2023",
     "areaServed": {
       "@type": "Country",
@@ -113,16 +113,19 @@
     "paymentAccepted": "Cash, Bank Transfer, MTN Mobile Money, Airtel Money",
     "hasOfferCatalog": {
       "@type": "OfferCatalog",
-      "name": "Electric Vehicles in Rwanda",
+      "name": "Vehicles in Rwanda — EVs & Quality Used Cars",
       "itemListElement": [
         {"@type": "OfferCatalog", "name": "Electric Sedans"},
         {"@type": "OfferCatalog", "name": "Electric SUVs"},
         {"@type": "OfferCatalog", "name": "Electric Pickups & Trucks"},
-        {"@type": "OfferCatalog", "name": "Electric Buses & Vans"}
+        {"@type": "OfferCatalog", "name": "Electric Buses & Vans"},
+        {"@type": "OfferCatalog", "name": "Certified Used Cars from China"}
       ]
     },
     "makesOffer": [
       {"@type": "Offer", "itemOffered": {"@type": "Service", "name": "EV Sales & Consultation"}},
+      {"@type": "Offer", "itemOffered": {"@type": "Service", "name": "Quality Used Car Sales"}},
+      {"@type": "Offer", "itemOffered": {"@type": "Service", "name": "Vehicle Quality Inspection & Certification"}},
       {"@type": "Offer", "itemOffered": {"@type": "Service", "name": "EV Charging Station"}},
       {"@type": "Offer", "itemOffered": {"@type": "Service", "name": "After-Sales Maintenance"}},
       {"@type": "Offer", "itemOffered": {"@type": "Service", "name": "Customs Clearance & Import"}},
