--- a/index.html
+++ b/index.html
@@ -3,29 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Triple Goats — Best Used Cars & Electric Vehicles in Kigali, Rwanda | Quality Vehicles & After-Sales Service</title>
-  
+  <title>Triple Goats — Best Used Cars & Electric Vehicles in Kigali, Rwanda</title>
+
   <!-- Favicon -->
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-  
+
   <!-- Preload -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="preload" href="/companylogo.jpg" as="image">
-  
+
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
-  
+
   <!-- Web App Manifest -->
   <link rel="manifest" href="/site.webmanifest">
-  
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="Triple Goats (T&G Automobile) — Rwanda's trusted used car and electric vehicle dealer in Kigali, a subsidiary of Zhejiang Aladdin Group. Shop BYD, Dongfeng, Leapmotor, Kia, Toyota & more EVs and quality used cars. Sourced directly from our China HQ to ensure the best price. Full after-sales support, EV charging, customs clearance, taxi service and car rental. Pay with MTN MoMo or Airtel Money.">
+
+  <!-- SEO: 通用默认 meta（各页面由 useHead 覆盖） -->
+  <meta name="description" content="Triple Goats (T&G Automobile) — Rwanda's trusted used car and electric vehicle dealer in Kigali, a subsidiary of Zhejiang Aladdin Group.">
   <meta name="keywords" content="electric vehicles Rwanda, used cars Kigali, EV dealer Kigali, best used cars Rwanda, second hand cars Kigali, Triple Goats, T&G Automobile, TG Automobile, TGAutomobile Rwanda, BYD Rwanda, Dongfeng Rwanda, Leapmotor Rwanda, Kia EV5 Kigali, Toyota BZ3 Rwanda, electric car Africa, used car import Rwanda, EV charging station Kigali, electric taxi Rwanda, car rental Kigali, new energy vehicles, sustainable transport Africa, Kicukiro car dealer, Gasabo, Nyarugenge, imodoka ya stima, amashanyarazi, MTN MoMo payment, Airtel Money, customs clearance Rwanda, quality inspection, certified Chinese vehicles, 浙江阿啦丁, 阿啦丁汽车, 阿啦丁进出口, zjaladin, aladinauto, TGAutomobile, 卢旺达电动汽车, 卢旺达二手车, 非洲新能源汽车, 中国电动汽车出口, 基加利汽车经销商">
   <meta name="author" content="Triple Goats - T&G Automobile, a subsidiary of Zhejiang Aladdin Import & Export Trading Co., Ltd.">
   <meta name="robots" content="index, follow">
@@ -33,7 +33,6 @@
   <meta name="geo.placename" content="Kigali, Rwanda">
   <meta name="geo.position" content="-1.9706;30.1044">
   <meta name="ICBM" content="-1.9706, 30.1044">
-  <link rel="canonical" href="https://tgautomobile.com/">
 
   <!-- Hreflang: 多语言/多地区路由 -->
   <link rel="alternate" hreflang="en-rw" href="https://tgautomobile.com/">
@@ -44,9 +43,9 @@
   <link rel="alternate" hreflang="zh" href="https://www.zjaladin.com/">
   <link rel="alternate" hreflang="en" href="https://www.aladinauto.com/">
 
-  <!-- Open Graph Meta Tags -->
+  <!-- Open Graph: 通用默认值（各页面由 useHead 覆盖） -->
   <meta property="og:title" content="Triple Goats — Best Used Cars & EVs in Kigali | Aladdin Group">
-  <meta property="og:description" content="Shop quality used cars & electric vehicles in Kigali. BYD, Dongfeng, Leapmotor & more. Sourced directly from China HQ. Full after-sales support, EV charging, customs clearance. A subsidiary of Zhejiang Aladdin Group.">
+  <meta property="og:description" content="Shop quality used cars & electric vehicles in Kigali. A subsidiary of Zhejiang Aladdin Group.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://tgautomobile.com/">
   <meta property="og:image" content="https://tgautomobile.com/companylogo.jpg">
@@ -56,10 +55,10 @@
   <meta property="og:locale:alternate" content="en_US">
   <meta property="og:locale:alternate" content="zh_CN">
 
-  <!-- Twitter Card Meta Tags -->
+  <!-- Twitter Card: 通用默认值（各页面由 useHead 覆盖） -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Triple Goats — Best Used Cars & EVs in Kigali | Aladdin Group">
-  <meta name="twitter:description" content="Quality used cars & EVs in Kigali. Sourced directly from China. Full after-sales, EV charging, customs clearance. A subsidiary of Zhejiang Aladdin Group.">
+  <meta name="twitter:description" content="Quality used cars & EVs in Kigali. A subsidiary of Zhejiang Aladdin Group.">
   <meta name="twitter:image" content="https://tgautomobile.com/companylogo.jpg">
 
   <!-- JSON-LD Structured Data: AutoDealer（本地经销商实体） -->
@@ -214,16 +213,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script>
-    // GitHub Pages SPA 重定向处理
-    (function(){
-      var redirect = sessionStorage.redirect;
-      delete sessionStorage.redirect;
-      if (redirect && redirect != location.href) {
-        history.replaceState(null, null, redirect);
-      }
-    })();
-  </script>
   <script type="module" src="/src/main.js"></script>
 </body>
 </html>
